fixed lists element not honouring dark mode changes

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -64,6 +64,18 @@
   visibility: hidden;
 }
 
+.custom-card {
+  padding: 0.75rem 1.25rem;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  transition: 0.3s;
+  width: 100%;
+  border-radius: 2px;
+}
+
+.custom-card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
 #rules {
   position: relative;
   left: 10%;
